fix aligning in footer

--- a/projects/janhanko/src/app/layout/footer/components/root/root.component.scss
+++ b/projects/janhanko/src/app/layout/footer/components/root/root.component.scss
@@ -23,6 +23,16 @@
   padding: 2rem 3.5rem;
   display: flex;
   justify-content: center;
+
+  @media (min-width: $breakpoint-xl) {
+    &:first-child {
+      justify-content: flex-start;
+    }
+
+    &:last-child {
+      justify-content: flex-end;
+    }
+  }
 }
 
 .footer__text,
